2004-12-30  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcellrenderertext.c (gtk_cell_renderer_text_set_property): 
	Use g_value_get_boolean() for ellipsize_set.  (#162447, 
	Brian Tarricone)

2004-12-30  Tor Lillqvist  <tml@iki.fi>

	* gtk/gtkicontheme.c (gtk_icon_theme_init): Use /usr/share/pixmaps
	only on Unix.

2004-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkmenuitem.c (gtk_menu_item_position_menu): Inherit
	submenu direction from the parent menu.

	* gtk/gtkmenushell.c (gtk_menu_shell_select_submenu_first): 
	Return a boolean indicating whether an item in the submenu
	was selected.
	(gtk_real_menu_shell_move_current): When going in child 
	direction, don't get stuck at completely insensitive 
	submenus.  (#162055, Billy Biggs)	

2004-12-27  Matthias Clasen  <mclasen@redhat.com>

	Make the clipboard image API more robust (#162357, 
	Torsten Schoenfeld):
	
	* gtk/gtkclipboard.c (clipboard_image_received_func): Don't
	ref the pixbuf if it is NULL.

	* gtk/gtkselection.c (gtk_selection_data_set_pixbuf): 
	NULL-terminate the varargs in the call to 
	gdk_pixbuf_save_to_buffer(). 
	(gtk_selection_data_get_pixbuf): Only use a pixbuf loader 
	if there is data to load.

2004-12-27  Matthias Clasen  <mclasen@redhat.com>

	* gdk/x11/gdkinput-x11.c (_gdk_input_common_other_event): 
	Set x_root and y_root in button and motion events from 
	extended input devices.  (#148715, Robert Ögren)

	* gtk/gtktreeview.c (gtk_tree_view_class_init): Fix a 
	typo.  (#162339, Alessio Dessi)

	* gtk/gtkadjustment.c (gtk_adjustment_class_init): Document
	properties as new since 2.4.  (#156101, Billy Biggs)

	* configure.in: Add a warning about the linux-fb 
	target.  (#155488, Zeeshan Ali)

	* gtk/gtkmain.c (gtk_init_with_args): Typo fix.  (#162278,
	Torsten Schoenfeld)

2004-12-26  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooser.c (gtk_file_chooser_set_action): 
	Typo fix.  (#162219, Masao Mutoh)
	(gtk_file_chooser_set_preview_widget_active): 